--- a/stm32f401cc_drivers/platformio.ini
+++ b/stm32f401cc_drivers/platformio.ini
@@ -14,5 +14,5 @@ board = genericSTM32F401CC
 debug_tool = stlink
 upload_protocol = stlink
 framework = cmsis
-; build_flags = -D RCC_TESTS
-build_flags = -D GPIO_TESTS
+; build_flags = -D GPIO_TEST
+build_flags = -D HLED_TEST
